--- a/web/themes/contrib/bootstrap/subthemes/bootstrap_subtheme/css/colors.css
+++ b/web/themes/contrib/bootstrap/subthemes/bootstrap_subtheme/css/colors.css
@@ -1,32 +1,32 @@
 /* ---------- Color Module Styles ----------- */
 
 body {
-  color: #3b3b3b;
-  background: #292929;
+  color: #191919;
+  background: #171717;
 }
 
 #page,
 #main-wrapper,
 .region-primary-menu .menu-item a.is-active,
 .region-primary-menu .menu-item--active-trail a {
-  background: #fff;
+  background: #171717;
 }
 
 .tabs ul.primary li a.is-active {
-  background-color: #fff;
+  background-color: #353535;
 }
 
 .tabs ul.primary li.is-active a {
-  background-color: #fff;
-  border-bottom-color: #fff;
+  background-color: #c43636;
+  border-bottom-color: #5f1212;
 }
 
 #navbar-top {
-  background-color: #055a8e;
+  background-color: #191919;
 }
 
 #navbar-main {
-  background-color: #1d84c3;
+  background-color: #171717;
 }
 
 a,
