--- a/web/themes/contrib/bootstrap/subthemes/bootstrap_subtheme/css/colors.css
+++ b/web/themes/contrib/bootstrap/subthemes/bootstrap_subtheme/css/colors.css
@@ -1,7 +1,7 @@
 /* ---------- Color Module Styles ----------- */
 
 body {
-  color: #191919;
+  color: #fff;
   background: #171717;
 }
 
@@ -81,7 +81,7 @@ a:active,
 }
 
 .site-footer {
-  background: #292929;
+  background: #171717;
 }
 
 .region-header,
